Added package = "." in BiocCheck code in GHA

--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -259,7 +259,7 @@ jobs:
           DISPLAY: 99.0
         run: |
           BiocCheck::BiocCheck(
-              dir('check', 'tar.gz$', full.names = TRUE),
+              package = ".",
               `quit-with-status` = TRUE,
               `no-check-R-ver` = TRUE,
               `no-check-bioc-help` = TRUE,
