--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -254,15 +254,15 @@ jobs:
           BiocGenerics:::testPackage()
         shell: Rscript {0}
         
+      - name: (Temporarily) Install correct version of BiocCheck
+        run: |
+          remotes::install_github("Bioconductor/BiocCheck@v1.33.16")
+        shell: Rscript {0}
+        
       - name: Run BiocCheck
         env:
           DISPLAY: 99.0
         run: |
-          .BAD_INSTALL_CALLS <- c(
-              "biocLite", "install.packages", "install_packages",
-              "update.packages", "install$"
-          )
-    
           BiocCheck::BiocCheck(
               package = ".",
               `quit-with-status` = TRUE,
