Updated get_anchor_list() after changes in syntenet

--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -263,7 +263,8 @@ jobs:
               `quit-with-status` = TRUE,
               `no-check-R-ver` = TRUE,
               `no-check-bioc-help` = TRUE,
-              `no-check-coding-practices` = TRUE
+              `no-check-coding-practices` = TRUE,
+              `no-check-version-num` = TRUE
           )
         shell: Rscript {0}
 
